Remove redundant surefire plugin configs from sub modules, add open-moduls param