@@ -140,6 +140,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens=java.base/java.lang=ALL-UNNAMED ${jacoco.env}</argLine>
+				</configuration>					
 			</plugin>
 		</plugins>
 	</build>
